--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -39,6 +41,8 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  hive_generator: ^1.1.1
+  build_runner: ^2.1.2
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -61,6 +65,13 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/Seal.png
+    - assets/icons/machine.jpg
+    - assets/icons/machine_green.jpg
+    - assets/icons/machine_orenge.jpg
+    - assets/icons/machine_red.jpg
+    - assets/icons/chat.jpg
+    - assets/icons/friends.jpg
+    - assets/icons/profile.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
